--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/kimberlie901/Social-Network-API#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "moments": "^0.0.2",
     "mongoose": "^7.1.0"
   }
 }
